--- a/src/style/style.css
+++ b/src/style/style.css
@@ -20,12 +20,18 @@ button {
   height: 100vh;
   text-align: center;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
   margin: 0 auto;
   box-sizing: content-box;
   width: 100%;
+}
+
+main {
+  flex: 1 1 auto;
 }
 
 .section__text {
