--- a/src/style/style.css
+++ b/src/style/style.css
@@ -8,6 +8,7 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   overflow: hidden;
+  background: #050522;
 }
 
 button {
@@ -15,10 +16,13 @@ button {
   border: 0;
 }
 
+.header__img {
+  height: 350px;
+}
+
 .wrapper {
-  background: #050522;
   box-shadow: 0px 0px 50px 5px rgba(6, 6, 34, 0.4);
-  height: 100svh;
+  height: 100dvh;
   text-align: center;
   position: relative;
   display: flex;
@@ -32,11 +36,11 @@ button {
 }
 
 main {
-  flex: 1 1 auto;
+  flex: 1 0 auto;
 }
 
 .section__text {
-  padding-top: 20px;
+  margin-top: 20px;
 }
 
 .section__title {
@@ -49,7 +53,8 @@ main {
 }
 
 .section__subtitle {
-  padding: 15px 20px 0;
+  padding: 0 20px;
+  margin-top: 10px;
   color: #f4f4f4;
   text-shadow: -1px 1px 10px rgba(0, 0, 0, 0.15);
   font-family: Segoe UI;
@@ -59,7 +64,7 @@ main {
 }
 
 .section__btn {
-  padding-top: 60px;
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -90,7 +95,7 @@ main {
 }
 
 .footer__title {
-  padding: 36px 0 20px;
+  padding-bottom: 20px;
   color: #ffde69;
   font-family: Segoe UI;
   font-size: 11px;
