--- a/src/style/style.css
+++ b/src/style/style.css
@@ -22,7 +22,7 @@ button {
 
 .wrapper {
   box-shadow: 0px 0px 50px 5px rgba(6, 6, 34, 0.4);
-  height: 100dvh;
+  height: 100svh;
   text-align: center;
   position: relative;
   display: flex;
