--- a/src/style/style.css
+++ b/src/style/style.css
@@ -17,6 +17,7 @@ button {
 }
 
 .header__img {
+  transform: translateY(-10%);
   height: 350px;
 }
 
@@ -40,7 +41,7 @@ main {
 }
 
 .section__text {
-  margin-top: 20px;
+  transform: translateY(-30%);
 }
 
 .section__title {
@@ -64,7 +65,7 @@ main {
 }
 
 .section__btn {
-  margin-top: 40px;
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
