--- a/src/style/style.css
+++ b/src/style/style.css
@@ -151,7 +151,7 @@ main {
 .input {
   width: 100%;
   height: 60px;
-  padding-left: 40px;
+  padding-left: 20px;
   border-radius: 10px;
   border: 2px solid #050522;
   background: #ffecaa;
@@ -161,6 +161,7 @@ main {
   font-size: 18px;
   font-weight: 400;
   line-height: normal;
+  outline: none;
 }
 
 .input::placeholder {
